--- a/css/less/site.less
+++ b/css/less/site.less
@@ -1,5 +1,5 @@
 @primary-color: #06083f; 
-@secondary-color: #089bdf;  
+@secondary-color: #00afe2;  
 @third-color: #555555;  
 /*
 FUNÇÕES PADRÕES START
@@ -28,9 +28,9 @@ NON-RESPONSIVE START
 **********************************************************************************************/
 /* ALTERAR APENAS ESTAS VARIAVEIS DE ACORDO COM O PROJETO START */
 .container {max-width: none !important;width: 960px;}
-.navbar-nav > li > a {padding-top: 3.5px;padding-bottom:3.5px;}
+.navbar-nav > li > a {padding-top: 24px;padding-bottom:24px;}
 /* ALTERAR APENAS ESTAS VARIAVEIS DE ACORDO COM O PROJETO END */
-/* Finesse the page header spacing */.page-header {margin-bottom: 30px;}.page-header .lead {margin-bottom: 10px;}/* Non-responsive overrides** Utilitze the following CSS to disable the responsive-ness of the container,* grid system, and navbar.*//* Reset the container *//* Always float the navbar header */.navbar-header {float: left;}/* Undo the collapsing navbar */.navbar-collapse {display: block !important;height: auto !important;padding-bottom: 0;overflow: visible !important;}.navbar-toggle {display: none;}.navbar-collapse {border-top: 0;}.navbar-brand {margin-left: -15px;}/* Always apply the floated nav */.navbar-nav {float: left;margin: 0;}.navbar-nav > li {float: left;}/* Redeclare since we override the float above */.navbar-nav.navbar-right {float: right;}/* Undo custom dropdowns */.navbar .navbar-nav .open .dropdown-menu {position: absolute;float: left;background-color: #fff;border: 1px solid #cccccc;border: 1px solid rgba(0, 0, 0, 0.15);border-width: 0 1px 1px;border-radius: 0 0 4px 4px;-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);}.navbar-default .navbar-nav .open .dropdown-menu > li > a {color: #333;}.navbar .navbar-nav .open .dropdown-menu > li > a:hover,.navbar .navbar-nav .open .dropdown-menu > li > a:focus,.navbar .navbar-nav .open .dropdown-menu > .active > a,.navbar .navbar-nav .open .dropdown-menu > .active > a:hover,.navbar .navbar-nav .open .dropdown-menu > .active > a:focus {color: #fff !important;background-color: #428bca !important;}.navbar .navbar-nav .open .dropdown-menu > .disabled > a,.navbar .navbar-nav .open .dropdown-menu > .disabled > a:hover,.navbar .navbar-nav .open .dropdown-menu > .disabled > a:focus {color: #999 !important;background-color: transparent !important;}
+/* Finesse the page header spacing */.page-header {margin-bottom: 30px;}.page-header .lead {margin-bottom: 10px;}/* Non-responsive overrides** Utilitze the following CSS to disable the responsive-ness of the container,* grid system, and navbar.*//* Reset the container *//* Always float the navbar header */.navbar-header {float: left;}/* Undo the collapsing navbar */.navbar-collapse {display: block !important;height: auto !important;padding-bottom: 0;overflow: visible !important;}.navbar-toggle {display: none;}.navbar-collapse {border-top: 0;}.navbar-brand {margin-left: -15px;}/* Always apply the floated nav */.navbar-nav {float: left;margin: 0;}.navbar-nav > li {float: left;}/* Redeclare since we override the float above */.navbar-nav.navbar-right {float: right;}/* Undo custom dropdowns */.navbar .navbar-nav .open .dropdown-menu {position: absolute;float: left;background-color: #fff;border: 1px solid #cccccc;border: 1px solid rgba(0, 0, 0, 0.15);border-width: 0 1px 1px;border-radius: 0 0 4px 4px;-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);}.navbar-default .navbar-nav .open .dropdown-menu > li > a {color: #333;}.navbar .navbar-nav .open .dropdown-menu > li > a:hover,.navbar .navbar-nav .open .dropdown-menu > li > a:focus,.navbar .navbar-nav .open .dropdown-menu > .active > a,.navbar .navbar-nav .open .dropdown-menu > .active > a:hover,.navbar .navbar-nav .open .dropdown-menu > .active > a:focus {color: #fff !important;background-color: @primary-color !important;}.navbar .navbar-nav .open .dropdown-menu > .disabled > a,.navbar .navbar-nav .open .dropdown-menu > .disabled > a:hover,.navbar .navbar-nav .open .dropdown-menu > .disabled > a:focus {color: #999 !important;background-color: transparent !important;}
 /**********************************************************************************************
 NON-RESPONSIVE END
 */
@@ -38,19 +38,68 @@ NON-RESPONSIVE END
 ::-moz-selection {background-color: @primary-color;color: #FFF;}
 small {display: inline-block;line-height: 1.1;}
 textarea {resize:vertical;}
-a {transition: all 0.25s ease 0s;}
+a, .btn {transition: all 0.25s ease 0s;}
 /*
 FONTS START
 **********************************************************************************************/
-.box-atuacao .box-content, .site-tablet .img.destaque {font-family: 'robotobold', Arial, sans-serif;}
+.box-galeria .media-heading, .box-categorias .media-heading {font-family: 'robotoregular', Arial, sans-serif;}
+.site-header .carrinho .title, .navbar-nav {font-family: 'robotobold', Arial, sans-serif;}
 .btn-circle-lg-white {font-family: 'robotobold_italic', Arial, sans-serif;}
+.site-header .atendimento, .navbar-text {font-family: 'robotoitalic', Arial, sans-serif;}
+.box-categorias .box-content, .box-banner .cycle-nav, .footer-header, .box-newsletter .box-header strong, .box-newsletter .btn, .box-galeria .box-header .plus {font-family: 'robotoblack', Arial, sans-serif;}
+.extra-footer-2 {font-family: Arial, sans-serif;}
 /**********************************************************************************************
 FONTS END
 */
 /*
 ESTRUTURA START
 **********************************************************************************************/
-
+.extra-geral {
+    background: url(../imagem/site/bg-header.jpg) no-repeat center top;
+}
+.extra-header {
+    .site-header {height: 260px;}
+    .container {position: relative;}
+    .navbar-brand {padding:18px 10px;}
+    .navbar-nav {
+        font-size: 16px;
+        > li {
+            + li {background: url(../imagem/site/bg-menu-item.png) no-repeat left center;padding-left: 7px;}
+        }
+        .icone {margin-top:-4px;}
+    }
+    .navbar-text.frase {position: absolute;left: 210px;top: 0px;margin-top:24px;margin-bottom: 24px;color: @secondary-color;}
+    .carrinho {
+        display: block;position: absolute;left: 360px;top: 100px;color: #FFF;border:1px solid #23288a;-webkit-border-radius: 50px;-moz-border-radius: 50px;-ms-border-radius: 50px;-o-border-radius: 50px;border-radius: 50px;overflow: hidden;font-size: 13px;
+        span {display: inline-block;}
+        > span {float: left;height: 42px;}
+        .qtd {background: #060842;padding:10px 0 10px 20px;}
+        .title {background: #00afef;padding:10px 20px 10px 0;}
+        .div {width: 26px;height: 42px;background: url(../imagem/site/carrinho-div.jpg) no-repeat left top;}
+    }
+    .atendimento {
+        position: absolute;right: 0;top: 92px;color: @secondary-color;line-height: .8;
+        font-size: 16px;
+        small {font-size: 12px;}
+        .icone {margin-left: 10px;margin-top:4px;}
+        * {vertical-align: middle;}
+    }
+}
+.extra-central {
+    .site-central {
+        padding:0 0 30px;
+    }
+}
+.extra-footer {
+    background: url(../imagem/site/bg-footer.jpg) no-repeat center top;position: relative;z-index: 1;
+    .site-footer {padding:30px 0 20px;}
+    .footer-header {font-size: 14px;}
+}
+.extra-footer-2 {
+    font-size: 10px;text-align: center;position: relative;margin-top:-20px;z-index: 2;
+    .site-footer-2 {padding:45px 0 20px;color: #FFF;}
+    background: url(../imagem/site/bg-footer-2.png) repeat-x center top;
+}
 
 /**********************************************************************************************
 ESTRUTURA END
@@ -69,12 +118,93 @@ CLASSES START
     }
 }
 .btn-rounded {-webkit-border-radius: 150px;-moz-border-radius: 150px;border-radius: 150px;}
+.box-banner {
+    margin-bottom: 30px;position: relative;
+    &, .box-cycle {width: 765px;height: 222px;}
+    .camisa-back, .camisa-front {position: absolute;}
+    .camisa-back {z-index: 1;top:-326px;right:-114px;}
+    .camisa-front {z-index: 3;top:-133px;right:-194px;}
+    .box-cycle {position: relative;z-index: 2;padding:10px 0 10px 10px;background: url(../imagem/site/bg-banner-mask.png) no-repeat left top;
+        .cycle-slideshow {position: relative;
+            &, .cycle-slideshow li {width: 755px;height: 202px;overflow: hidden;}
+        }
+    }
+    .imagem, .text {display: block;float: left;height: 201px;}
+    .imagem {
+        width: 461px;position: relative;
+        img {position: relative;z-index: 1;}
+        .mask {position: absolute;left: 0;top: 0;right: 0;bottom: 0;background: url(../imagem/site/bg-banner-mask.png) no-repeat -10px -10px;display: block;z-index: 2;}
+    }
+    .text {
+        background: #06083f;width: 294px;padding:20px;
+        &, a {color: #FFF;}
+    }
+    .box-header {display: block;margin-bottom: 20px;font-size: 14px;}
+    .title {display: block;font-size: 22px;line-height: 1.1;}
+    .cycle-nav {
+        position: absolute;left: 471px;bottom: 10px;z-index: 4;
+        span {
+            display: block;float: left;width: 28px;height: 28px;text-align: center;padding:5px 0;margin-right: 1px;font-size: 13px;color: #089bdf;background: #FFF;cursor: pointer;
+            &.cycle-pager-active {background:none;color: #FFF;}
+        }
+    }
+}
+.box-categorias, .box-galeria {
+    .box-header {border-bottom: 1px solid #d2d0d0;padding-bottom: 4px;margin-bottom: 15px;}
+    .media-heading {font-size: 14px;color: #555;}
+}
+.box-categorias {
+    margin-bottom: 30px;
+    .lista-categorias {
+        > li {float: left;width: 50%;line-height: 1.1;}
+    }
+}
+.box-newsletter {
+    background: url(../imagem/site/bg-newsletter.gif) no-repeat center top #ebe6e0;margin-top: 24px;
+    .box-header {
+        padding:30px 34px;line-height: 1;
+        strong {font-size: 18px;}
+    }
+    .box-content {padding:0 25px 0px;height: 118px;}
+    .btn {
+        background: url(../imagem/site/bg-newsletter.gif) no-repeat center bottom #00afe7;padding:12px 30px 20px;text-align: left;font-size: 16px;text-transform: uppercase;
+        &:hover {background-color: darken(#00afe7, 10%);}
+    }
+    .form-control {border:0;}
+}
+.box-galeria {
+    .plus {color: #089bdf;font-size: 13px;}
+}
 
 
 .imagem {display: inline-block;overflow: hidden;max-width: 100%;}
 .imagem-rounded {-webkit-border-radius: 150px;-moz-border-radius: 150px;border-radius: 150px;}
 .inline-block {display:inline-block;}
 [class^='icon-'], [class*='icon-'] {background-repeat:no-repeat;vertical-align:middle;display:inline-block;background-image:url(../imagem/site/icon.png);}
+
+.lista-categorias {
+    list-style: url(../imagem/site/list.png);padding-left: 18px;font-size: 18px;
+}
+.lista-fotos {
+    > li {
+        float: left;
+        .content {
+            border:5px solid #ebe6e0;display: block;position: relative;height: 270px;padding:9px;
+        }
+        .link {
+            display: block;
+            &:hover {
+                text-decoration: none;
+                .title {text-decoration: underline;}
+            }
+        }
+        .imagem {display: block;position: relative;margin-bottom: 10px;}
+        .text {display: block;height: 40px;position: relative;}
+        .title, .carrinho {display: inline-block;vertical-align: middle;line-height: 1;}
+        .title {width: 79%;}
+        .carrinho {width: 19%;text-align: right;}
+    }
+}
 
 .space {width:1%;display:inline-block;height:100%;vertical-align:middle;}
 .relative {position: relative;}
