--- a/css/site.css
+++ b/css/site.css
@@ -17,8 +17,8 @@ NON-RESPONSIVE START
   width: 960px;
 }
 .navbar-nav > li > a {
-  padding-top: 3.5px;
-  padding-bottom: 3.5px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 /* ALTERAR APENAS ESTAS VARIAVEIS DE ACORDO COM O PROJETO END */
 /* Finesse the page header spacing */
@@ -83,7 +83,7 @@ NON-RESPONSIVE START
 .navbar .navbar-nav .open .dropdown-menu > .active > a:hover,
 .navbar .navbar-nav .open .dropdown-menu > .active > a:focus {
   color: #fff !important;
-  background-color: #428bca !important;
+  background-color: #06083f !important;
 }
 .navbar .navbar-nav .open .dropdown-menu > .disabled > a,
 .navbar .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -109,18 +109,38 @@ small {
 textarea {
   resize: vertical;
 }
-a {
+a,
+.btn {
   transition: all 0.25s ease 0s;
 }
 /*
 FONTS START
 **********************************************************************************************/
-.box-atuacao .box-content,
-.site-tablet .img.destaque {
+.box-galeria .media-heading,
+.box-categorias .media-heading {
+  font-family: 'robotoregular', Arial, sans-serif;
+}
+.site-header .carrinho .title,
+.navbar-nav {
   font-family: 'robotobold', Arial, sans-serif;
 }
 .btn-circle-lg-white {
   font-family: 'robotobold_italic', Arial, sans-serif;
+}
+.site-header .atendimento,
+.navbar-text {
+  font-family: 'robotoitalic', Arial, sans-serif;
+}
+.box-categorias .box-content,
+.box-banner .cycle-nav,
+.footer-header,
+.box-newsletter .box-header strong,
+.box-newsletter .btn,
+.box-galeria .box-header .plus {
+  font-family: 'robotoblack', Arial, sans-serif;
+}
+.extra-footer-2 {
+  font-family: Arial, sans-serif;
 }
 /**********************************************************************************************
 FONTS END
@@ -128,6 +148,115 @@ FONTS END
 /*
 ESTRUTURA START
 **********************************************************************************************/
+.extra-geral {
+  background: url(../imagem/site/bg-header.jpg) no-repeat center top;
+}
+.extra-header .site-header {
+  height: 260px;
+}
+.extra-header .container {
+  position: relative;
+}
+.extra-header .navbar-brand {
+  padding: 18px 10px;
+}
+.extra-header .navbar-nav {
+  font-size: 16px;
+}
+.extra-header .navbar-nav > li + li {
+  background: url(../imagem/site/bg-menu-item.png) no-repeat left center;
+  padding-left: 7px;
+}
+.extra-header .navbar-nav .icone {
+  margin-top: -4px;
+}
+.extra-header .navbar-text.frase {
+  position: absolute;
+  left: 210px;
+  top: 0px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  color: #00afe2;
+}
+.extra-header .carrinho {
+  display: block;
+  position: absolute;
+  left: 360px;
+  top: 100px;
+  color: #FFF;
+  border: 1px solid #23288a;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  border-radius: 50px;
+  overflow: hidden;
+  font-size: 13px;
+}
+.extra-header .carrinho span {
+  display: inline-block;
+}
+.extra-header .carrinho > span {
+  float: left;
+  height: 42px;
+}
+.extra-header .carrinho .qtd {
+  background: #060842;
+  padding: 10px 0 10px 20px;
+}
+.extra-header .carrinho .title {
+  background: #00afef;
+  padding: 10px 20px 10px 0;
+}
+.extra-header .carrinho .div {
+  width: 26px;
+  height: 42px;
+  background: url(../imagem/site/carrinho-div.jpg) no-repeat left top;
+}
+.extra-header .atendimento {
+  position: absolute;
+  right: 0;
+  top: 92px;
+  color: #00afe2;
+  line-height: .8;
+  font-size: 16px;
+}
+.extra-header .atendimento small {
+  font-size: 12px;
+}
+.extra-header .atendimento .icone {
+  margin-left: 10px;
+  margin-top: 4px;
+}
+.extra-header .atendimento * {
+  vertical-align: middle;
+}
+.extra-central .site-central {
+  padding: 0 0 30px;
+}
+.extra-footer {
+  background: url(../imagem/site/bg-footer.jpg) no-repeat center top;
+  position: relative;
+  z-index: 1;
+}
+.extra-footer .site-footer {
+  padding: 30px 0 20px;
+}
+.extra-footer .footer-header {
+  font-size: 14px;
+}
+.extra-footer-2 {
+  font-size: 10px;
+  text-align: center;
+  position: relative;
+  margin-top: -20px;
+  z-index: 2;
+  background: url(../imagem/site/bg-footer-2.png) repeat-x center top;
+}
+.extra-footer-2 .site-footer-2 {
+  padding: 45px 0 20px;
+  color: #FFF;
+}
 /**********************************************************************************************
 ESTRUTURA END
 */
@@ -179,6 +308,161 @@ CLASSES START
   -moz-border-radius: 150px;
   border-radius: 150px;
 }
+.box-banner {
+  margin-bottom: 30px;
+  position: relative;
+}
+.box-banner,
+.box-banner .box-cycle {
+  width: 765px;
+  height: 222px;
+}
+.box-banner .camisa-back,
+.box-banner .camisa-front {
+  position: absolute;
+}
+.box-banner .camisa-back {
+  z-index: 1;
+  top: -326px;
+  right: -114px;
+}
+.box-banner .camisa-front {
+  z-index: 3;
+  top: -133px;
+  right: -194px;
+}
+.box-banner .box-cycle {
+  position: relative;
+  z-index: 2;
+  padding: 10px 0 10px 10px;
+  background: url(../imagem/site/bg-banner-mask.png) no-repeat left top;
+}
+.box-banner .box-cycle .cycle-slideshow {
+  position: relative;
+}
+.box-banner .box-cycle .cycle-slideshow,
+.box-banner .box-cycle .cycle-slideshow .cycle-slideshow li {
+  width: 755px;
+  height: 202px;
+  overflow: hidden;
+}
+.box-banner .imagem,
+.box-banner .text {
+  display: block;
+  float: left;
+  height: 201px;
+}
+.box-banner .imagem {
+  width: 461px;
+  position: relative;
+}
+.box-banner .imagem img {
+  position: relative;
+  z-index: 1;
+}
+.box-banner .imagem .mask {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: url(../imagem/site/bg-banner-mask.png) no-repeat -10px -10px;
+  display: block;
+  z-index: 2;
+}
+.box-banner .text {
+  background: #06083f;
+  width: 294px;
+  padding: 20px;
+}
+.box-banner .text,
+.box-banner .text a {
+  color: #FFF;
+}
+.box-banner .box-header {
+  display: block;
+  margin-bottom: 20px;
+  font-size: 14px;
+}
+.box-banner .title {
+  display: block;
+  font-size: 22px;
+  line-height: 1.1;
+}
+.box-banner .cycle-nav {
+  position: absolute;
+  left: 471px;
+  bottom: 10px;
+  z-index: 4;
+}
+.box-banner .cycle-nav span {
+  display: block;
+  float: left;
+  width: 28px;
+  height: 28px;
+  text-align: center;
+  padding: 5px 0;
+  margin-right: 1px;
+  font-size: 13px;
+  color: #089bdf;
+  background: #FFF;
+  cursor: pointer;
+}
+.box-banner .cycle-nav span.cycle-pager-active {
+  background: none;
+  color: #FFF;
+}
+.box-categorias .box-header,
+.box-galeria .box-header {
+  border-bottom: 1px solid #d2d0d0;
+  padding-bottom: 4px;
+  margin-bottom: 15px;
+}
+.box-categorias .media-heading,
+.box-galeria .media-heading {
+  font-size: 14px;
+  color: #555;
+}
+.box-categorias {
+  margin-bottom: 30px;
+}
+.box-categorias .lista-categorias > li {
+  float: left;
+  width: 50%;
+  line-height: 1.1;
+}
+.box-newsletter {
+  background: url(../imagem/site/bg-newsletter.gif) no-repeat center top #ebe6e0;
+  margin-top: 24px;
+}
+.box-newsletter .box-header {
+  padding: 30px 34px;
+  line-height: 1;
+}
+.box-newsletter .box-header strong {
+  font-size: 18px;
+}
+.box-newsletter .box-content {
+  padding: 0 25px 0px;
+  height: 118px;
+}
+.box-newsletter .btn {
+  background: url(../imagem/site/bg-newsletter.gif) no-repeat center bottom #00afe7;
+  padding: 12px 30px 20px;
+  text-align: left;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+.box-newsletter .btn:hover {
+  background-color: #0088b4;
+}
+.box-newsletter .form-control {
+  border: 0;
+}
+.box-galeria .plus {
+  color: #089bdf;
+  font-size: 13px;
+}
 .imagem {
   display: inline-block;
   overflow: hidden;
@@ -198,6 +482,53 @@ CLASSES START
   vertical-align: middle;
   display: inline-block;
   background-image: url(../imagem/site/icon.png);
+}
+.lista-categorias {
+  list-style: url(../imagem/site/list.png);
+  padding-left: 18px;
+  font-size: 18px;
+}
+.lista-fotos > li {
+  float: left;
+}
+.lista-fotos > li .content {
+  border: 5px solid #ebe6e0;
+  display: block;
+  position: relative;
+  height: 270px;
+  padding: 9px;
+}
+.lista-fotos > li .link {
+  display: block;
+}
+.lista-fotos > li .link:hover {
+  text-decoration: none;
+}
+.lista-fotos > li .link:hover .title {
+  text-decoration: underline;
+}
+.lista-fotos > li .imagem {
+  display: block;
+  position: relative;
+  margin-bottom: 10px;
+}
+.lista-fotos > li .text {
+  display: block;
+  height: 40px;
+  position: relative;
+}
+.lista-fotos > li .title,
+.lista-fotos > li .carrinho {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 1;
+}
+.lista-fotos > li .title {
+  width: 79%;
+}
+.lista-fotos > li .carrinho {
+  width: 19%;
+  text-align: right;
 }
 .space {
   width: 1%;
